--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-{{users}}
+
+  <form [formGroup]="heroForm" novalidate (ngSubmit)="onReg(heroForm)">
+    <div class="form-group">
+      <label class="center-block">Username:
+        <input class="form-control" formControlName="username">
+      </label>
+      <label class="center-block">Password:
+        <input class="form-control"  type="password" formControlName="password">
+      </label>
+
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
