--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,26 @@
 
-  <form [formGroup]="heroForm" novalidate (ngSubmit)="onReg(heroForm)">
+  <form [formGroup]="checkoutForm" novalidate (ngSubmit)="onSave(checkoutForm)">
     <div class="form-group">
-      <label class="center-block">Username:
-        <input class="form-control" formControlName="username">
+      <label class="center-block">Name:
+        <input class="form-control" formControlName="name">
       </label>
-      <label class="center-block">Password:
-        <input class="form-control"  type="password" formControlName="password">
+      <label class="center-block">Card Type:
+        <div class="form-group">
+          <select class="form-control" id="exampleSelect1" formControlName="cards" >
+            <option  *ngFor = "let card of addedCards">{{card.cardName}}</option>
+          </select>
+        </div>
       </label>
-
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
-  <form [formGroup]="heroForm" novalidate (ngSubmit)="onLog(heroForm)">
-    <div class="form-group">
-      <label class="center-block">Username:
-        <input class="form-control" formControlName="username">
-      </label>
-      <label class="center-block">Password:
-        <input class="form-control"  type="password" formControlName="password">
-      </label>
 
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+  <form [formGroup]="cardForm" novalidate (ngSubmit)="onCardSave(cardForm)">
+    <label class="center-block">Card Name:
+      <input class="form-control" formControlName="cardName">
+    </label>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-
-  <div *ngIf = 'isLogin'>
-    {{user.username}}
-  </div>
+  <div *ngFor = "let cardss of addedCards">{{cardss.cardName}}</div>
+  
